--- a/main.html
+++ b/main.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pseudo-Elements Example</title>
-  <link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-  <div id="container">
-    Main Content
-  </div>
+	<!-- the entire body must be written by student -->
+	<div id="container">This is the main container element</div>
+    <script type="text/javascript" src="./script.js">
+</script>
+
 </body>
+
 </html>
